<resources>
    <string name="app_name">Розрахунок заощаджень</string>
    
    <!-- Main Activity -->
    <string name="app_info_title">Додаток для розрахунку заощаджень в іноземній валюті</string>
    <string name="app_info_description">Цей додаток допоможе вам розрахувати заощадження при конвертації частини вашого доходу в іноземну валюту протягом року.</string>
    <string name="button_start_calculation">Почати розрахунок</string>
    <string name="button_exit">Вийти</string>
    
    <!-- Calculation 1 Activity -->
    <string name="calculation1_title">Введення даних</string>
    <string name="monthly_income_label">Місячний дохід (грн):</string>
    <string name="percentage_label">Відсоток доходу (0 &lt; p &lt; 1):</string>
    <string name="button_next">Далі</string>
    <string name="error_invalid_income">Будь ласка, введіть коректний місячний дохід</string>
    <string name="error_invalid_percentage">Відсоток повинен бути більше 0 та менше 1</string>
    
    <!-- Calculation 2 Activity -->
    <string name="calculation2_title">Вибір валюти</string>
    <string name="currency_label">Оберіть валюту:</string>
    <string name="currency_euro">Євро (EUR)</string>
    <string name="currency_dollar">Долар (USD)</string>
    <string name="button_calculate">Розрахувати</string>
    
    <!-- Results Activity -->
    <string name="results_title">Результати розрахунку</string>
    <string name="hypothetical_annual_income">Гіпотетичний повний річний дохід (Sy):</string>
    <string name="amount_spent_exchange">Кількість гривень, витрачених на обмін (Sc):</string>
    <string name="currency_purchased">Кількість валюти, придбаної за рік (W):</string>
    <string name="currency_value_end_year">Гривнева вартість валюти на кінець року (SH):</string>
    <string name="hryvnia_balance">Гривневий залишок (SL):</string>
    <string name="total_sum">Сума гривневого залишку та вартості валюти (H):</string>
    <string name="total_savings">Сума заощадження (R):</string>
    <string name="button_ok">Ок</string>
    <string name="currency_unit">%1$.2f %2$s</string>
    <string name="hryvnia_unit">%1$.2f грн</string>
</resources>