<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium"
    tools:context=".Calculation1Activity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculation1_title"
        style="@style/TitleText"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMonthlyIncomeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/monthly_income_label"
        style="@style/LabelText"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etMonthlyIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_height"
        android:inputType="numberDecimal"
        android:hint="0.00"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tvMonthlyIncomeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPercentageLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/percentage_label"
        style="@style/LabelText"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/etMonthlyIncome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_height"
        android:inputType="numberDecimal"
        android:hint="0.00"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tvPercentageLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        style="@style/PrimaryButton"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/etPercentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>

